--- a/TeamProject/frund3/pom.xml
+++ b/TeamProject/frund3/pom.xml
@@ -1,22 +1,40 @@
+<!--
+Licensed to the Apache Software Foundation (ASF) under one
+or more contributor license agreements.  See the NOTICE file
+distributed with this work for additional information
+regarding copyright ownership.  The ASF licenses this file
+to you under the Apache License, Version 2.0 (the
+"License"); you may not use this file except in compliance
+with the License.  You may obtain a copy of the License at
+
+  http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing,
+software distributed under the License is distributed on an
+"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+KIND, either express or implied.  See the License for the
+specific language governing permissions and limitations
+under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
-  <artifactId>untitled1</artifactId>
+  <groupId>1</groupId>
+  <artifactId>1</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Flink Quickstart Job</name>
-  <url>http://www.myorganization.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <flink.version>blink-3.7.0</flink.version>
-    <java.version>1.8</java.version>
-    <scala.binary.version>2.11</scala.binary.version>
-    <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <flink.version>1.18.0</flink.version>
+    <target.java.version>1.8</target.java.version>
+    <scala.binary.version>2.12</scala.binary.version>
+    <maven.compiler.source>${target.java.version}</maven.compiler.source>
+    <maven.compiler.target>${target.java.version}</maven.compiler.target>
+    <log4j.version>2.17.1</log4j.version>
   </properties>
 
   <repositories>
@@ -37,16 +55,20 @@
     <!-- Apache Flink dependencies -->
     <!-- These dependencies are provided, because they should not be packaged into the JAR file. -->
     <dependency>
-      <groupId>com.alibaba.blink</groupId>
-      <artifactId>flink-java</artifactId>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-streaming-java</artifactId>
       <version>${flink.version}</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.alibaba.blink</groupId>
-      <artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-clients</artifactId>
       <version>${flink.version}</version>
-      <scope>provided</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-kafka -->
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-connector-kafka</artifactId>
+      <version>3.0.1-1.18</version>
     </dependency>
 
     <!-- Add connector dependencies here. They must be in the default scope (compile). -->
@@ -54,25 +76,31 @@
     <!-- Example:
 
     <dependency>
-        <groupId>com.alibaba.blink</groupId>
-        <artifactId>flink-connector-kafka-0.10_${scala.binary.version}</artifactId>
-        <version>${flink.version}</version>
+        <groupId>org.apache.flink</groupId>
+        <artifactId>flink-connector-kafka</artifactId>
+        <version>3.0.0-1.17</version>
     </dependency>
     -->
 
     <!-- Add logging framework, to produce console output when running in the IDE. -->
     <!-- These dependencies are excluded from the application JAR by default. -->
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.7</version>
-      <scope>runtime</scope>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>${log4j.version}</version>
+
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-      <scope>runtime</scope>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>${log4j.version}</version>
+
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${log4j.version}</version>
+
     </dependency>
   </dependencies>
 
@@ -85,8 +113,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
+          <source>${target.java.version}</source>
+          <target>${target.java.version}</target>
         </configuration>
       </plugin>
 
@@ -104,12 +132,13 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <createDependencyReducedPom>false</createDependencyReducedPom>
               <artifactSet>
                 <excludes>
-                  <exclude>com.alibaba.blink:force-shading</exclude>
+                  <exclude>org.apache.flink:flink-shaded-force-shading</exclude>
                   <exclude>com.google.code.findbugs:jsr305</exclude>
                   <exclude>org.slf4j:*</exclude>
-                  <exclude>log4j:*</exclude>
+                  <exclude>org.apache.logging.log4j:*</exclude>
                 </excludes>
               </artifactSet>
               <filters>
@@ -125,8 +154,9 @@
                 </filter>
               </filters>
               <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>org.example.StreamingJob</mainClass>
+                  <mainClass>1.DataStreamJob</mainClass>
                 </transformer>
               </transformers>
             </configuration>
@@ -150,7 +180,7 @@
                   <pluginExecutionFilter>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <versionRange>[3.0.0,)</versionRange>
+                    <versionRange>[3.1.1,)</versionRange>
                     <goals>
                       <goal>shade</goal>
                     </goals>
@@ -180,78 +210,4 @@
       </plugins>
     </pluginManagement>
   </build>
-
-  <!-- This profile helps to make things run out of the box in IntelliJ -->
-  <!-- Its adds Flink's core classes to the runtime class path. -->
-  <!-- Otherwise they are missing in IntelliJ, because the dependency is 'provided' -->
-  <profiles>
-    <profile>
-      <id>add-dependencies-for-IDEA</id>
-
-      <activation>
-        <property>
-          <name>idea.version</name>
-        </property>
-      </activation>
-
-      <dependencies>
-        <dependency>
-          <groupId>com.alibaba.blink</groupId>
-          <artifactId>flink-java</artifactId>
-          <version>${flink.version}</version>
-          <scope>compile</scope>
-        </dependency>
-        <dependency>
-          <groupId>com.alibaba.blink</groupId>
-          <artifactId>flink-streaming-java_${scala.binary.version}</artifactId>
-          <version>${flink.version}</version>
-          <scope>compile</scope>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>3.0.0</version>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>shade</goal>
-                </goals>
-                <configuration>
-                  <artifactSet>
-                    <excludes>
-                      <exclude>com.google.code.findbugs:jsr305</exclude>
-                      <exclude>org.slf4j:*</exclude>
-                      <exclude>log4j:*</exclude>
-                    </excludes>
-                  </artifactSet>
-                  <filters>
-                    <filter>
-                      <!-- Do not copy the signatures in the META-INF folder.
-                      Otherwise, this might cause SecurityExceptions when using the JAR. -->
-                      <artifact>*:*</artifact>
-                      <excludes>
-                        <exclude>META-INF/*.SF</exclude>
-                        <exclude>META-INF/*.DSA</exclude>
-                        <exclude>META-INF/*.RSA</exclude>
-                      </excludes>
-                    </filter>
-                  </filters>
-                  <transformers combine.children="append">
-                    <transformer
-                            implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer">
-                    </transformer>
-                  </transformers>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
-
 </project>
